MOTECH-1991: Made constraint and index names from MDS more user friendly